src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
/* Constants */
:root {
  /* Colors */
  --fiverr-pink: rgb(255, 118, 174);
  --fiverr-light-pink: rgb(255, 211, 174);
  --fiverr-medium-pink: rgb(190, 82, 114);
  --fiverr-dark-pink: rgb(77, 23, 39);

  --fiverr-green: rgb(29, 191, 115);
  --fiverr-light-green: rgb(208, 247, 230);
  --fiverr-medium-green: rgb(0, 115, 46);
  --fiverr-dark-green: rgb(0, 57, 18);

  --fiverr-yellow: rgb(212, 228, 30);
  --fiverr-light-yellow: rgb(241, 244, 203);
  --fiverr-medium-yellow: rgb(104, 114, 0);
  --fiverr-dark-yellow: rgb(37, 66, 0);

  --fiverr-orange: rgb(255, 118, 64);
  --fiverr-light-orange: rgb(255, 224, 212);
  --fiverr-medium-orange: rgb(143, 41, 0);
  --fiverr-dark-orange: rgb(66, 19, 0);

  --grey0: hsl(0, 0%, 95%);
  --grey1: hsl(0, 0%, 85%);
  --grey2: hsl(0, 0%, 75%);
  --grey3: hsl(0, 0%, 65%);
  --grey4: hsl(0, 0%, 55%);
  --grey5: hsl(0, 0%, 45%);
  --grey6: hsl(0, 0%, 35%);
  --grey7: hsl(0, 0%, 25%);
  --grey8: hsl(0, 0%, 15%);
  --grey9: hsl(0, 0%, 5%);

  /* Defaults for light theme */
  --text-primary: var(--grey9);
  --text-secondary: var(--grey8);
  --bg-primary: var(--grey0);
  --bg-secondary: var(--grey2);
  --accent-color-disabled: var(--fiverr-dark-green);
  --accent-color: var(--fiverr-green);
  --accent-color-active: var(var(--fiverr-pink));

  /* Components' colors */
  --box-shadow: var(--grey3);

  /* Components' sizes */
  --border-radius: 0.25em;
  --font-size: 16px;

  /* Sizing */
  --nav-size: 5rem;
  --big-nav-size: 15rem;

  /* Default animation speed */
  --transition-speed: 300ms;
}

html,
#root,
main,
body {
  height: 100%;
  margin: 0;
}

/* Small screens */
@media only screen and (max-width: 600px) {
}

/* Large screens */
@media only screen and (min-width: 600px) {
  main {
    margin-left: var(--nav-size);
  }
}

